# rdma-migration-system

./: Makefile  README.md  instructions  meson.build
experiments/: config.txt
experiments/allocation/: Makefile  allocation.cpp  config.txt  results_alloc_dealloc_with_faults.txt  results_alloc_dealloc_without_faults.txt  run.sh
experiments/c++-containers/: Makefile  main.cpp  run.sh
experiments/container_final/: Makefile  aqua04_data.sh  baseline.cpp  config.txt  data_transfer.cpp  node2.sh  pg_256_100.csv  pg_256_20.csv  plot.py  pr_256_100.csv  pr_256_20.csv  run.sh  st_256_100.csv  st_256_20.csv  stc_256_20.csv
experiments/memory_regions/: Makefile  expRegionTransfer.cpp  expTransfer.cpp  ownership_transfer_with_faults.txt  ownership_transfer_without_faults.txt  run.sh  transfer_results.txt
experiments/paging/: Makefile  expPagingSingle.cpp  expPagingUniform.cpp  main.cpp
experiments/paging_memory_regions/: Makefile  expPagingSingle.cpp  expPagingUniform.cpp  expPingPong.cpp  run_seq.sh  run_unif.sh
experiments/rdma_benchmarking/: Makefile  memory_pinning.cpp
include/c++-containers/: pool_based_allocator.hpp  rdma_container_base.hpp  rdma_container_utils.hpp  rdma_unordered_map.hpp  rdma_vector.hpp
include/distributed-allocator/: RDMAMemNode.hpp  RDMAMemory.hpp  README.md  mempool.hpp
include/paging/: paging.hpp
include/rdma-network/: rdma_client.hpp  rdma_server.hpp  rdma_server_prototype.hpp  rdma_structs.hpp  readme.md  util.hpp
tests/: config.txt
tests/rdma-network/: Makefile  meson.build  test-client.cpp  test-server.cpp  test-transfer.cpp
(+72 files in other folders)
